--- a/Password-genarator.ipynb
+++ b/Password-genarator.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "def passwdgen(l):\n",
     "    ch = string.ascii_letters + string.digits + string.punctuation\n",
-    "    passswd=''.join(random.choice(ch)for _ in range (l))\n",
+    "    passwd=''.join(random.choice(ch)for _ in range (l))\n",
     "\n",
     "    return passwd\n",
     "\n",
