--- a/Password-genarator.ipynb
+++ b/Password-genarator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "5ca32c57-9776-4126-8c74-525ff9f4de8b",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Password is  []\n"
+      "Random Password is  x#H1.wf]\n"
      ]
     }
    ],
@@ -37,6 +37,14 @@
     "password = passwdgen(l)\n",
     "print(\"Random Password is \",password)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9c0596b-b42d-43d2-b03a-cff53d5cb228",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
